# mcp-server-isitdown

./: .gitignore  .pre-commit-config.yaml  CLAUDE.md  Dockerfile  README.md  isitdown.py  main.py  pyproject.toml  smithery.yaml
src/mcp_isitdown/: __init__.py  __main__.py  server.py
src/mcp_server_isitdown/: __init__.py  __main__.py  server.py
src/mcp_server_isitdown/data/: status_pages.csv
