[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "mcp-isitdown-service"
version = "0.0.2"
description = "An MCP server that checks if a website is currently down by querying the website isitdownrightnow.com"
authors = [
    { name = "Really Him", email = "hesreallyhim@proton.me" }
]
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "beautifulsoup4>=4.13.3",
    "mcp[cli]>=1.3.0",
    "httpx>=0.26.0",
]
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
]

[project.scripts]
mcp-isitdown = "mcp_isitdown.__main__:main"

[project.urls]
"Bug Tracker" = "https://github.com/hesreallyhim/mcp-isitdown-service/issues"

[tool.setuptools]
package-dir = {"" = "src"}
packages = ["mcp_isitdown"]

[tool.pyright]
typeCheckingMode = "basic"