[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "mcp-isitdown-service"
version = "0.0.2"
description = "An MCP server that checks if a website is currently down by querying the website isitdownrightnow.com"
authors = [
    { name = "Really Him", email = "hesreallyhim@proton.me" }
]
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "beautifulsoup4>=4.13.3",
    "mcp[cli]>=1.3.0",
    "httpx>=0.26.0",
]
[project.optional-dependencies]
dev = ["pre-commit"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "Intended Audience :: System Administrators",
    "License :: OSI Approved :: MIT License",
    "Natural Language :: English",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.12",
    "Operating System :: OS Independent",
    "Topic :: Internet :: WWW/HTTP",
    "Topic :: System :: Monitoring",
    "Topic :: Utilities",
]

[project.scripts]
mcp-isitdown = "mcp_isitdown.__main__:main"

[project.urls]
"Bug Tracker" = "https://github.com/hesreallyhim/mcp-isitdown-service/issues"

[tool.setuptools.packages.find]
where = ["src"]

[tool.pyright]
typeCheckingMode = "basic"

[tool.black]
line-length = 88
target-version = ["py312"]
include = '\.pyi?$'

[tool.isort]
profile = "black"
line_length = 88
multi_line_output = 3
