[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "mcp-server-isitdown"
description = "An MCP server that checks if a website is currently down by querying the website isitdownrightnow.com"
authors = [
    { name = "Really Him", email = "hesreallyhim@proton.me" }
]
dynamic = ["version"]
readme = "README.md"
license = { file = "LICENSE" }
requires-python = ">=3.12"
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "Intended Audience :: System Administrators",
    "License :: OSI Approved :: MIT License",
    "Natural Language :: English",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.12",
    "Operating System :: OS Independent",
    "Topic :: Internet :: WWW/HTTP",
    "Topic :: System :: Monitoring",
    "Topic :: Utilities",
]
dependencies = [
    "beautifulsoup4>=4.13.3",
    "mcp[cli]>=1.3.0",
    "httpx>=0.26.0",
]
[project.optional-dependencies]
dev = [
    "pre-commit",
    "mypy",
    "types-beautifulsoup4",
]

[project.scripts]
mcp-server-isitdown = "mcp_server_isitdown.__main__:main"

[project.urls]
Homepage = "https://github.com/hesreallyhim/mcp-server-isitdown"
Repository = "https://github.com/hesreallyhim/mcp-server-isitdown.git"
Documentation = "https://github.com/hesreallyhim/mcp-server-isitdown#readme"
"Bug Tracker" = "https://github.com/hesreallyhim/mcp-server-isitdown/issues"

[tool.setuptools.packages.find]
where = ["src"]

[tool.pyright]
typeCheckingMode = "basic"

[tool.black]
line-length = 88
target-version = ["py312"]
include = '\.pyi?$'

[tool.isort]
profile = "black"
line_length = 88
multi_line_output = 3

[tool.mypy]
python_version = "3.12"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = true
disallow_incomplete_defs = true

[[tool.mypy.overrides]]
module = "httpx.*"
ignore_missing_imports = true

[[tool.mypy.overrides]]
module = "mcp.*"
ignore_missing_imports = true
